--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 POSTGRES_USER='paha'
 POSTGRES_PASSWORD='Ovcebuk17!'
 SECRET_KEY = 'django-insecure-zb#l-rl3yeyukr1f*$0ee_7^s!)0oy75p60-re+u1&js0c*0us'
+email_password = 'hcawnhfmwbvudfgu'
