--- a/.env
+++ b/.env
@@ -2,3 +2,13 @@ POSTGRES_USER='paha'
 POSTGRES_PASSWORD='Ovcebuk17!'
 SECRET_KEY = 'django-insecure-zb#l-rl3yeyukr1f*$0ee_7^s!)0oy75p60-re+u1&js0c*0us'
 email_password = 'hcawnhfmwbvudfgu'
+
+EMAIL_HOST =  'smtp.yandex.ru'
+EMAIL_HOST_USER = 'alexpervosotnikov@yandex.ru'
+EMAIL_PORT = 465
+EMAIL_USE_SSL = True
+EMAIL_USE_TLS = False
+DEFAULT_FROM_EMAIL = 'alexpervosotnikov@yandex.ru'
+ACCOUNT_EMAIL_UNIQUE = True
+ACCOUNT_EMAIL_CONFIRMATION_REQUIRED = True
+
